✏️ misc fixes & cleanup